fix(relationship2authority): minor improving
  ref: CST-26502
  ref: DURACOM-498